--- a/ControleTickets/ControleTickets.csproj
+++ b/ControleTickets/ControleTickets.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <ApplicationIcon>business_ticket_2363.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
