modficações de design

--- a/ControleTickets/ControleTickets.csproj
+++ b/ControleTickets/ControleTickets.csproj
@@ -4,7 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
-    <ApplicationIcon>business_ticket_2363.ico</ApplicationIcon>
+    <ApplicationIcon>iconfinder-document03-1622833_121957.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,6 +17,10 @@
       <Isolated>false</Isolated>
       <EmbedInteropTypes>true</EmbedInteropTypes>
     </COMReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="iconfinder-document03-1622833_121957.ico" />
   </ItemGroup>
 
   <ItemGroup>
